--- a/succinct.cabal
+++ b/succinct.cabal
@@ -64,10 +64,6 @@ common hw-fingertree                  { build-depends: hw-fingertree            
 common hw-hedgehog                    { build-depends: hw-hedgehog                    >= 0.1.0.1    && < 0.2    }
 common hw-hspec-hedgehog              { build-depends: hw-hspec-hedgehog              >= 0.1.0.4    && < 0.2    }
 common hw-int                         { build-depends: hw-int                         >= 0.0.2      && < 0.0.3  }
-common hw-json-simd {
-  if arch(x86_64)
-    build-depends: hw-json-simd               >= 0.1.0.2    && < 0.2
-}
 common hw-mquery                      { build-depends: hw-mquery                      >= 0.2.0.0    && < 0.3    }
 common hw-parser                      { build-depends: hw-parser                      >= 0.1        && < 0.2    }
 common hw-prim                        { build-depends: hw-prim                        >= 0.6.2.32   && < 0.7    }
@@ -98,6 +94,7 @@ common succinct-balancedparens        { build-depends: succinct:succinct-balance
 common succinct-balancedparens-gen    { build-depends: succinct:succinct-balancedparens-gen                     }
 common succinct-bits                  { build-depends: succinct:succinct-bits                                   }
 common succinct-json                  { build-depends: succinct:succinct-json                                   }
+common succinct-json-simd             { build-depends: succinct:succinct-json-simd                              }
 common succinct-json-simple-cursor    { build-depends: succinct:succinct-json-simple-cursor                     }
 common succinct-json-standard-cursor  { build-depends: succinct:succinct-json-standard-cursor                   }
 common succinct-rankselect            { build-depends: succinct:succinct-rankselect                             }
@@ -422,7 +419,6 @@ executable succinct-json-app
                       , bytestring
                       , dlist
                       , generic-lens
-                      , hw-json-simd
                       , hw-mquery
                       , hw-prim
                       , lens
@@ -430,6 +426,7 @@ executable succinct-json-app
                       , optparse-applicative
                       , succinct-balancedparens
                       , succinct-json
+                      , succinct-json-simd
                       , succinct-json-simple-cursor
                       , succinct-json-standard-cursor
                       , succinct-rankselect
@@ -523,6 +520,74 @@ library succinct-json-examples
                         Example3
                         Example4
 
+library succinct-json-simd
+  import:               base, config
+                      , bytestring
+                      , hw-prim
+                      , lens
+                      , vector
+  autogen-modules:      Paths_succinct
+  other-modules:        Paths_succinct
+  hs-source-dirs:       components/succinct-json-simd
+  cc-options:           -mssse3 -mlzcnt -mbmi2 -mavx2
+  include-dirs:         components/succinct-json-simd--cbits
+  build-tool-depends:   c2hs:c2hs
+  exposed-modules:      HaskellWorks.Data.Json.Simd.Capabilities
+                        HaskellWorks.Data.Json.Simd.Index.Simple
+                        HaskellWorks.Data.Json.Simd.Index.Standard
+                        HaskellWorks.Data.Json.Simd.Internal.Foreign
+                        HaskellWorks.Data.Json.Simd.Internal.Index.Simple
+                        HaskellWorks.Data.Json.Simd.Internal.Index.Standard
+                        HaskellWorks.Data.Json.Simd.Internal.List
+  c-sources:            components/succinct-json-simd--cbits/debug.c
+                        components/succinct-json-simd--cbits/simd.c
+                        components/succinct-json-simd--cbits/simd-spliced.c
+                        components/succinct-json-simd--cbits/simd-state.c
+                        components/succinct-json-simd--cbits/simd-phi-table-32.c
+                        components/succinct-json-simd--cbits/simd-transition-table-32.c
+
+executable succinct-json-simd--app
+  import:               base, config
+                      , bytestring
+                      , hw-prim
+                      , lens
+                      , optparse-applicative
+                      , succinct-json-simd
+                      , vector
+  main-is:              Main.hs
+  hs-source-dirs:       components/succinct-json-simd--app
+  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
+  other-modules:        App.Commands
+                        App.Commands.Capabilities
+                        App.Commands.CreateIndex
+                        App.Commands.Types
+                        App.Lens
+
+test-suite succinct-json-simd--test
+  import:               base, config
+                      , bytestring
+                      , hw-prim
+                      , lens
+                      , succinct-json-simd
+                      , transformers
+                      , vector
+  type:                 exitcode-stdio-1.0
+  main-is:              Spec.hs
+  hs-source-dirs:       components/succinct-json-simd--test
+  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
+
+test-suite succinct-json-simd--doctest
+  import:               base, config
+                      , doctest
+                      , doctest-discover
+                      , succinct-json-simd
+  default-language:     Haskell2010
+  type:                 exitcode-stdio-1.0
+  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
+  main-is:              DoctestDriver.hs
+  HS-Source-Dirs:       components/succinct-json-simd--doctest
+  build-tool-depends:   doctest-discover:doctest-discover
+
 library succinct-json-simple-cursor
   import:               base, config
                       , bytestring
@@ -549,12 +614,12 @@ executable succinct-json-simple-cursor--app
   import:               base, config
                       , bytestring
                       , generic-lens
-                      , hw-json-simd
                       , hw-prim
                       , lens
                       , mmap
                       , optparse-applicative
                       , succinct-balancedparens
+                      , succinct-json-simd
                       , succinct-json-simple-cursor
                       , succinct-rankselect
                       , succinct-rankselect-base
@@ -615,11 +680,11 @@ library succinct-json-standard-cursor
                       , array
                       , bits-extra
                       , bytestring
-                      , hw-json-simd
                       , hw-prim
                       , mmap
                       , succinct-balancedparens
                       , succinct-bits
+                      , succinct-json-simd
                       , succinct-rankselect
                       , succinct-rankselect-base
                       , vector
